trying to fix sticky side bar

--- a/style.css
+++ b/style.css
@@ -291,3 +291,9 @@ i.fa-moon {
   border-radius: 20px;
   background-color: #4363d4;
 }
+
+.left-side {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
